--- a/Practica/Views/Home/Home.cshtml
+++ b/Practica/Views/Home/Home.cshtml
@@ -25,7 +25,7 @@
                     @Html.DisplayNameFor(model => model.FechaPago)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model=>model.TotalAPagar)
+                    @Html.DisplayNameFor(model => model.TotalAPagar)
                 </th>
             </tr>
         </thead>
@@ -79,6 +79,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.FechaPago)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TotalAPagar)
+                </th>
             </tr>
         </thead>
 
@@ -100,6 +103,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.FechaPago)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TotalAPagar)
                     </td>
                 </tr>
             }
